10/compiling_error.txt
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:57:33: error: default argument for template parameter for class enclosing 'bst_tree<Ty, Compare>::bst_tree()'
 bst_tree<Ty, Compare>::bst_tree()
                                 ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:65:68: error: default argument for template parameter for class enclosing 'bst_tree<Ty, Compare>::bst_tree(const bst_tree<Ty, Compare>&)'
 bst_tree<Ty, Compare>::bst_tree(bst_tree<Ty, Compare> const & other)
                                                                    ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:77:63: error: default argument for template parameter for class enclosing 'bst_tree<Ty, Compare>::bst_tree(bst_tree<Ty, Compare>&&)'
 bst_tree<Ty, Compare>::bst_tree(bst_tree<Ty, Compare> && other)
                                                               ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:84:63: error: default argument for template parameter for class enclosing 'void bst_tree<Ty, Compare>::swap(bst_tree<Ty, Compare>&)'
 void bst_tree<Ty, Compare>::swap(bst_tree<Ty, Compare> & other) {
                                                               ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:91:47: error: default argument for template parameter for class enclosing 'const node<Ty>* bst_tree<Ty, Compare>::top() const'
 node<Ty> const * bst_tree<Ty, Compare>::top() const {
                                               ^~~~~
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:97:92: error: default argument for template parameter for class enclosing 'bst_tree<Ty, Compare>& bst_tree<Ty, Compare>::operator=(const bst_tree<Ty, Compare>&)'
 bst_tree<Ty, Compare>& bst_tree<Ty, Compare>::operator=(bst_tree<Ty, Compare> const & other) {
                                                                                            ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:107:87: error: default argument for template parameter for class enclosing 'bst_tree<Ty, Compare>& bst_tree<Ty, Compare>::operator=(bst_tree<Ty, Compare>&&)'
 bst_tree<Ty, Compare>& bst_tree<Ty, Compare>::operator=(bst_tree<Ty, Compare> && other) {
                                                                                       ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:114:34: error: default argument for template parameter for class enclosing 'bst_tree<Ty, Compare>::~bst_tree()'
 bst_tree<Ty, Compare>::~bst_tree() {
                                  ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:121:35: error: default argument for template parameter for class enclosing 'void bst_tree<Ty, Compare>::clear()'
 void bst_tree<Ty, Compare>::clear() {
                                   ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:130:52: error: default argument for template parameter for class enclosing 'void bst_tree<Ty, Compare>::insert(const Ty&)'
 void bst_tree<Ty, Compare>::insert(Ty const & value) {
                                                    ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:155:55: error: default argument for template parameter for class enclosing 'bool bst_tree<Ty, Compare>::is_node(const Ty&) const'
 bool bst_tree<Ty, Compare>::is_node(Ty const & value) const {
                                                       ^~~~~
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:173:38: error: default argument for template parameter for class enclosing 'size_t bst_tree<Ty, Compare>::size() const'
 size_t bst_tree<Ty, Compare>::size() const {
                                      ^~~~~
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:179:51: error: default argument for template parameter for class enclosing 'void bst_tree<Ty, Compare>::erase(const Ty&)'
 void bst_tree<Ty, Compare>::erase(Ty const & value) {
                                                   ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:193:44: error: default argument for template parameter for class enclosing 'void bst_tree<Ty, Compare>::emplace(Args&&)'
 bst_tree<Ty, Compare>::emplace(Args && args) {
                                            ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:220:74: error: default argument for template parameter for class enclosing 'void bst_tree<Ty, Compare>::create_node(node<Ty>*&, const Ty&)'
 void bst_tree<Ty, Compare>::create_node(node<Ty> *& cur, Ty const & value) {
                                                                          ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:230:78: error: default argument for template parameter for class enclosing 'void bst_tree<Ty, Compare>::copy_nodes(node<Ty>*&, const node<Ty>*)'
 void bst_tree<Ty, Compare>::copy_nodes(node<Ty> *& dest, node<Ty> const * src) {
                                                                              ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:242:46: error: default argument for template parameter for class enclosing 'void bst_tree<Ty, Compare>::rm(node<Ty>*)'
 void bst_tree<Ty, Compare>::rm(node<Ty> * cur) {
                                              ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:255:60: error: default argument for template parameter for class enclosing 'void bst_tree<Ty, Compare>::del_node(node<Ty>*&)'
 void bst_tree<Ty, Compare>::del_node(node<Ty> *& ptr_on_cur) {
                                                            ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:277:58: error: default argument for template parameter for class enclosing 'node<Ty>** bst_tree<Ty, Compare>::parent(const Ty&)'
 node<Ty>** bst_tree<Ty, Compare>::parent(Ty const & value) {
                                                          ^
C:\Users\Zula\Documents\GitHub\pracs\10\bst.cpp:293:66: error: default argument for template parameter for class enclosing 'void bst_tree<Ty, Compare>::emplace_node(node<Ty>*&, Args&&)'
 bst_tree<Ty, Compare>::emplace_node(node<Ty> *& cur, Args && args) {
                                                                  ^
